--- a/html/table2.html
+++ b/html/table2.html
@@ -1,40 +1,41 @@
-<!DOCTYPE html> <!-- Указывает, что это документ HTML5 -->
-<html lang="en"> <!-- Открывает элемент <html> и устанавливает язык документа на английский -->
+<!DOCTYPE html> <!-- Указывает, что это HTML5 документ -->
+<html lang="en"> <!-- Начало документа HTML с указанием языка (английский) -->
 <head>
   <meta charset="UTF-8"> <!-- Устанавливает кодировку документа на UTF-8 -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Устанавливаем масштаб страницы и адаптацию под ширину экрана устройства -->
-  <title>task</title> <!-- Заголовок страницы, отображаемый на вкладке браузера -->
-  <link rel="stylesheet" href="../css/styles.css"> <!-- Подключает внешний файл стилей CSS -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Настройки для адаптивного дизайна на мобильных устройствах -->
+  <title>№</title> <!-- Заголовок страницы, отображаемый в вкладке браузера -->
+  <link rel="stylesheet" href="../css/styles.css"> <!-- Подключение внешнего CSS-файла для стилизации страницы -->
 </head>
 <body>
-  <h1>Задания</h1> <!-- Заголовок страницы -->
+  <h1 class="task-header">Задание</h1> <!-- Заголовок страницы с классом для стилизации -->
 
-  <!-- Шапка страницы -->
-  <div id="header"> <!-- Контейнер для шапки страницы с идентификатором "header" -->
-    <p><strong>Номер задания:</strong> <span id="headerNumberTask"></span></p> <!-- Абзац с номером задания -->
-    <p><strong>Работник:</strong> <span id="headerWorker"></span></p> <!-- Абзац с именем работника -->
-    <p><strong>Дата выдачи:</strong> <span id="headerDateIssue"></span></p> <!-- Абзац с датой выдачи -->
-    <p><strong>Дата принятия:</strong> <span id="headerDateAccept"></span></p> <!-- Абзац с датой принятия -->
+  <div id="header"> <!-- Контейнер для заголовка задания -->
+    <p><strong>Номер задания:</strong> <span id="headerNumberTask"></span></p> <!-- Отображение номера задания -->
+    <p><strong>Работник:</strong> <span id="headerWorker"></span></p> <!-- Отображение имени работника -->
+    <p><strong>Дата выдачи:</strong> <span id="headerDateIssue"></span></p> <!-- Отображение даты выдачи задания -->
+    <p><strong>Дата принятия:</strong> <span id="headerDateAccept"></span></p> <!-- Отображение даты принятия задания -->
   </div>
 
-  <!-- Таблица -->
-  <table id="taskTable"> <!-- Создает таблицу с идентификатором "taskTable" -->
-    <thead> <!-- Заголовок таблицы -->
-      <tr> <!-- Строка для заголовков столбцов таблицы -->
-        <th>Номер СП</th> <!-- Заголовок столбца "Номер СП" -->
-        <th>Наименование</th> <!-- Заголовок столбца "Наименование" -->
-        <th>Типоразмер</th> <!-- Заголовок столбца "Типоразмер" -->
-        <th>Номер операции</th> <!-- Заголовок столбца "Номер операции" -->
-        <th>Наименование операции</th> <!-- Заголовок столбца "Наименование операции" -->
-        <th>Кол-во выдано</th> <!-- Заголовок столбца "Кол-во выдано" -->
-        <th>Кол-во принято</th> <!-- Заголовок столбца "Кол-во принято" -->
-        <th>Процент выполнения</th> <!-- Заголовок столбца "Процент выполнения" -->
+  <button id="backToList">Вернуться к списку</button> <!-- Кнопка для возврата к списку заданий -->
+
+  <table id="taskTable"> <!-- Таблица для отображения деталей задания с идентификатором taskTable -->
+    <thead>
+      <tr> <!-- Заголовок таблицы -->
+        <th>Номер СП</th> <!-- Заголовок для номера специальности -->
+        <th>Наименование</th> <!-- Заголовок для наименования -->
+        <th>Типоразмер</th> <!-- Заголовок для типоразмера -->
+        <th>Номер операции</th> <!-- Заголовок для номера операции -->
+        <th>Наименование операции</th> <!-- Заголовок для наименования операции -->
+        <th>Кол-во выдано</th> <!-- Заголовок для количества выданного -->
+        <th>Кол-во принято</th> <!-- Заголовок для количества принятого -->
+        <th>Процент выполнения</th> <!-- Заголовок для процента выполнения -->
       </tr>
     </thead>
-    <tbody> <!-- Тело таблицы, где данные будут добавлены динамически через JavaScript -->
+    <tbody>
+      <!-- Данные будут добавлены динамически через JavaScript -->
     </tbody>
   </table>
 
-  <script src="../js/script2.js"></script> <!-- Подключаем файл скриптов для динамического управления таблицей -->
+  <script src="../js/script2.js"></script> <!-- Подключение внешнего JavaScript-файла для функциональности страницы -->
 </body>
 </html>
