--- a/html/table2.html
+++ b/html/table2.html
@@ -1,34 +1,41 @@
-<!DOCTYPE html> <!-- Указывает, что это HTML5 документ -->
-<html lang="en"> <!-- Начало документа HTML с указанием языка (английский) -->
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8"> <!-- Устанавливает кодировку документа на UTF-8 -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Настройки для адаптивного дизайна на мобильных устройствах -->
-  <title>№</title> <!-- Заголовок страницы, отображаемый в вкладке браузера -->
-  <link rel="stylesheet" href="../css/styles.css"> <!-- Подключение внешнего CSS-файла для стилизации страницы -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Задание</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+  <script>
+    const numberTask = "{{ numberTask }}";
+  </script>
 </head>
 <body>
-  <h1 class="task-header">Задание</h1> <!-- Заголовок страницы с классом для стилизации -->
+  <h1 class="task-header">Задание</h1>
 
-  <div id="header"> <!-- Контейнер для заголовка задания -->
-    <p><strong>Номер задания:</strong> <span id="headerNumberTask"></span></p> <!-- Отображение номера задания -->
-    <p><strong>Работник:</strong> <span id="headerWorker"></span></p> <!-- Отображение имени работника -->
-    <p><strong>Дата выдачи:</strong> <span id="headerDateIssue"></span></p> <!-- Отображение даты выдачи задания -->
-    <p><strong>Дата принятия:</strong> <span id="headerDateAccept"></span></p> <!-- Отображение даты принятия задания -->
+  <div id="header">
+    <p><strong>Номер задания:</strong> <span id="headerNumberTask">{{ numberTask }}</span></p>
+    <p><strong>Работник:</strong> <span id="headerWorker"></span></p>
+    <p><strong>Дата выдачи:</strong> <span id="headerDateIssue"></span></p>
+    <p><strong>Дата принятия:</strong> <span id="headerDateAccept"></span></p>
   </div>
 
-  <button id="backToList">Вернуться к списку</button> <!-- Кнопка для возврата к списку заданий -->
+  <div id="buttonContainer">
+    <button id="backToList">Вернуться к списку</button>
+    <button id="editValuesButton">Изменить значения</button>
+    <button id="saveChangesButton" style="display: none;">Сохранить изменения</button>
+  </div>
 
-  <table id="taskTable"> <!-- Таблица для отображения деталей задания с идентификатором taskTable -->
+  <table id="taskTable">
     <thead>
-      <tr> <!-- Заголовок таблицы -->
-        <th>Номер СП</th> <!-- Заголовок для номера специальности -->
-        <th>Наименование</th> <!-- Заголовок для наименования -->
-        <th>Типоразмер</th> <!-- Заголовок для типоразмера -->
-        <th>Номер операции</th> <!-- Заголовок для номера операции -->
-        <th>Наименование операции</th> <!-- Заголовок для наименования операции -->
-        <th>Кол-во выдано</th> <!-- Заголовок для количества выданного -->
-        <th>Кол-во принято</th> <!-- Заголовок для количества принятого -->
-        <th>Процент выполнения</th> <!-- Заголовок для процента выполнения -->
+      <tr>
+        <th>Номер СП</th>
+        <th>Наименование</th>
+        <th>Типоразмер</th>
+        <th>Номер операции</th>
+        <th>Наименование операции</th>
+        <th>Кол-во выдано</th>
+        <th>Кол-во принято</th>
+        <th>Процент выполнения</th>
       </tr>
     </thead>
     <tbody>
@@ -36,6 +43,6 @@
     </tbody>
   </table>
 
-  <script src="../js/script2.js"></script> <!-- Подключение внешнего JavaScript-файла для функциональности страницы -->
+  <script src="{{ url_for('static', filename='js/script2.js') }}"></script>
 </body>
 </html>
