--- a/html & json/table2.html
+++ b/html & json/table2.html
@@ -45,6 +45,7 @@
         <th>Наименование операции</th>
         <th>Кол-во выдано</th>
         <th>Кол-во принято</th>
+        <th>Несоответствующие ДСЕ</th>
         <th>Процент выполнения</th>
       </tr>
     </thead>
